--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.14",
     "@ai-sdk/gateway": "^1.0.15",
+    "@ai-sdk/google": "^2.0.13",
     "@ai-sdk/openai": "^2.0.27",
     "@ai-sdk/provider": "2.0.0",
     "@ai-sdk/react": "2.0.26",
