feat: implement internationalization support with translations, add RTL support, and refactor authentication flow for improved user experience

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,9 @@
     { "pattern": "app/*" },
     { "pattern": "packages/*" }
   ],
-  "jira-plugin.workingProject": ""
+  "jira-plugin.workingProject": "",
+  "i18n-ally.localesPaths": [
+    "i18n",
+    "messages"
+  ]
 }
